# ffmpeg_demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  log.hpp  main.cpp  pub.hpp
debug/: ffmpegdemo
ffhelper/: ffwrapper.cpp  ffwrapper.hpp
ffplay_demo/: ffplay_demo.cpp  ffplay_demo.hpp  ffplay_demo_helper.cpp  ffplay_demo_helper.hpp
ffprobe_demo/: CMakeLists.txt  ffprobe_demo.cpp  ffprobe_demo.hpp  ffprobe_demo.md  ffprobe_demo_def.hpp
ffprobe_demo/test/: main.cpp  testprobe.cpp
include/: log.hpp  pub.hpp
release/: ffmpegdemo
sdl_interface/: sdli.cpp  sdli.hpp
